k8s/apps/media/arr/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: arr
  labels:
    app: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  strategy:
    type: Recreate
  template:
    metadata:
      namespace: sonarr
      labels:
        app: sonarr
    spec:
      nodeSelector:
        topology.kubernetes.io/zone: hsp-proxmox0
      securityContext:
        runAsNonRoot: true
        runAsUser: 2501
        runAsGroup: 2501
        fsGroup: 2501
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      dnsConfig:
        options:
          # Lower ndots to avoid search-domain expansion issues (musl/glibc resolver short-circuit)
          # and ensure external and cluster FQDNs resolve correctly.
          # Use this on other Alpine based containers if I face similar issues.
          - name: ndots
            value: "1"
      containers:
        - name: sonarr
          image: ghcr.io/home-operations/sonarr:4.0.18@sha256:2cd77fb3d81909a734d61bb8f71462044cb9d2f187e626a28a05a5c4e4be8fd2 # renovate: datasource=docker depName=ghcr.io/home-operations/sonarr packageName=ghcr.io/home-operations/sonarr versioning=docker registryUrl=https://ghcr.io
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          ports:
            - name: http
              containerPort: 8989
          volumeMounts:
            - name: sonarr-config
              mountPath: /config
            - name: tmp
              mountPath: /tmp
            - name: data
              mountPath: /app/data
          resources:
            requests:
              cpu: 50m
              memory: 384Mi
            limits:
              cpu: 1000m
              memory: 512Mi
      volumes:
        - name: sonarr-config
          persistentVolumeClaim:
            claimName: sonarr-config
        - name: tmp
          emptyDir: {}
        - name: data
          nfs:
            server: 192.168.65.250
            path: /volume1/media
